[gd_scene load_steps=19 format=3 uid="uid://defuaijvpgkhn"]

[ext_resource type="Script" uid="uid://od1jienr37dl" path="res://scenes/main_menu/settings/settings_video.gd" id="1_wsyhu"]
[ext_resource type="Script" uid="uid://cxxp1bfw3sldw" path="res://scenes/main_menu/settings/settings_world_appareance.gd" id="2_tonjr"]
[ext_resource type="Texture2D" uid="uid://ql8v8tau18u1" path="res://assets/images/icons/checkbox_checked.svg" id="3_ct4oh"]
[ext_resource type="Texture2D" uid="uid://dpwdl2106eu1o" path="res://assets/default_data/custom_resources/world_textures/checkerboard.png" id="4_rr6tq"]
[ext_resource type="Script" uid="uid://dml4twebveb3q" path="res://scenes/main_menu/settings/settings_fps_limit.gd" id="5_awey5"]
[ext_resource type="Script" uid="uid://desnvm0q70wky" path="res://scenes/main_menu/settings/settings_fps_overlay.gd" id="6_p4dxm"]
[ext_resource type="Texture2D" uid="uid://dodywvhrikacr" path="res://assets/images/icons/checkbox_unchecked.svg" id="7_s4g6u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1yvei"]

[sub_resource type="ImageTexture" id="ImageTexture_vtpo4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bheco"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.160784, 0.160784, 0.160784, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydstq"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.160784, 0.160784, 0.160784, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p1fy7"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.160784, 0.160784, 0.160784, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_og8m1"]
Button/styles/normal = SubResource("StyleBoxFlat_1yvei")
CheckBox/icons/checked = ExtResource("3_ct4oh")
CheckBox/icons/unchecked = SubResource("ImageTexture_vtpo4")
CheckBox/styles/focus = SubResource("StyleBoxFlat_bheco")
CheckBox/styles/hover = SubResource("StyleBoxFlat_bheco")
CheckBox/styles/hover_pressed = SubResource("StyleBoxFlat_bheco")
CheckBox/styles/normal = SubResource("StyleBoxFlat_bheco")
CheckBox/styles/pressed = SubResource("StyleBoxFlat_bheco")
ColorPickerButton/styles/normal = SubResource("StyleBoxFlat_ydstq")
Label/font_sizes/font_size = 22
LineEdit/styles/normal = SubResource("StyleBoxFlat_p1fy7")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pcput"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1wm2h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s7lkr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0honh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u5u36"]

[node name="Video" type="VBoxContainer"]
offset_right = 325.0
offset_bottom = 464.0
script = ExtResource("1_wsyhu")

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Video"
vertical_alignment = 1

[node name="ResolutionLabel" type="Label" parent="."]
layout_mode = 2
text = "Resolution"

[node name="ResolutionSlider" type="HSlider" parent="."]
layout_mode = 2
min_value = 0.1
max_value = 1.0
step = 0.05
value = 1.0

[node name="FovLabel" type="Label" parent="."]
layout_mode = 2
text = "Camera FOV"

[node name="FovSlider" type="HSlider" parent="."]
layout_mode = 2
min_value = 60.0
max_value = 140.0
value = 80.0

[node name="WindowModeLabel" type="Label" parent="."]
layout_mode = 2
text = "Window mode"

[node name="WindowModeOptions" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "fullscreen"
popup/item_0/id = 1
popup/item_1/text = "windowed"
popup/item_1/id = 1

[node name="WorldAppareance" type="VBoxContainer" parent="."]
layout_mode = 2
script = ExtResource("2_tonjr")

[node name="WorldAppareanceLabel" type="Label" parent="WorldAppareance"]
layout_mode = 2
text = "World appareance"

[node name="WorldColor" type="HBoxContainer" parent="WorldAppareance"]
layout_mode = 2

[node name="Label" type="Label" parent="WorldAppareance/WorldColor"]
layout_mode = 2
size_flags_horizontal = 3
text = "World color"

[node name="Color" type="ColorPickerButton" parent="WorldAppareance/WorldColor" groups=["Persist", "PutLabel"]]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme = SubResource("Theme_og8m1")
color = Color(0.360784, 0.615686, 1, 1)

[node name="TargetColor" type="HBoxContainer" parent="WorldAppareance"]
layout_mode = 2

[node name="Label" type="Label" parent="WorldAppareance/TargetColor"]
layout_mode = 2
size_flags_horizontal = 3
text = "Targets color"

[node name="TargetColor" type="ColorPickerButton" parent="WorldAppareance/TargetColor" groups=["Persist", "PutLabel"]]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme = SubResource("Theme_og8m1")
color = Color(1, 0.74902, 0, 1)

[node name="WorldTexture" type="OptionButton" parent="WorldAppareance"]
layout_mode = 2
expand_icon = true

[node name="Preview" type="TextureRect" parent="WorldAppareance"]
self_modulate = Color(0.360784, 0.615686, 1, 1)
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
texture = ExtResource("4_rr6tq")
stretch_mode = 1

[node name="TargetPreview" type="ColorRect" parent="WorldAppareance/Preview"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.74902, 0, 1)

[node name="FPSLimit" type="VBoxContainer" parent="."]
layout_mode = 2
script = ExtResource("5_awey5")

[node name="FPSLimitLabel" type="Label" parent="FPSLimit"]
layout_mode = 2
text = "Fps limit"

[node name="FPSLimitSlider" type="HSlider" parent="FPSLimit"]
layout_mode = 2
min_value = 60.0
max_value = 360.0
step = 5.0
value = 120.0

[node name="FPSOverlay" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
script = ExtResource("6_p4dxm")

[node name="FPSOverlayLabel" type="Label" parent="FPSOverlay"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fps Overlay: "

[node name="FPSOverlayCheckBox" type="CheckBox" parent="FPSOverlay"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_pcput")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_1wm2h")
theme_override_styles/hover = SubResource("StyleBoxEmpty_s7lkr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0honh")
theme_override_styles/normal = SubResource("StyleBoxEmpty_u5u36")
theme_override_icons/checked = ExtResource("3_ct4oh")
theme_override_icons/unchecked = ExtResource("7_s4g6u")

[connection signal="value_changed" from="ResolutionSlider" to="." method="_on_resolution_slider_value_changed"]
[connection signal="value_changed" from="FovSlider" to="." method="_on_fov_slider_value_changed"]
[connection signal="item_selected" from="WindowModeOptions" to="." method="_on_window_mode_options_item_selected"]
[connection signal="color_changed" from="WorldAppareance/WorldColor/Color" to="WorldAppareance" method="_on_color_color_changed"]
[connection signal="color_changed" from="WorldAppareance/TargetColor/TargetColor" to="WorldAppareance" method="_on_target_color_color_changed"]
[connection signal="item_selected" from="WorldAppareance/WorldTexture" to="WorldAppareance" method="_on_world_texture_item_selected"]
[connection signal="value_changed" from="FPSLimit/FPSLimitSlider" to="FPSLimit" method="_on_fps_limit_slider_value_changed"]
[connection signal="toggled" from="FPSOverlay/FPSOverlayCheckBox" to="FPSOverlay" method="_on_fps_overlay_check_box_toggled"]
